# django-model-view-docstring

./: .gitignore  LICENSE  MANIFEST.in  README.md  README.rst  setup.cfg
model_view_docstring/: apps.py  urls.py  views.py
model_view_docstring.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
model_view_docstring/templates/model_view_docstring/: model_view_docstring.html
